{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 245,
  "lineage": "39326bbc-8f00-de2d-2091-e26a62b3890d",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "accounting_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-09b4feef0b81163ac",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b4feef0b81163ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "accounting-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "accounting-prod-sg"
            },
            "tags_all": {
              "Name": "accounting-prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-09b4feef0b81163ac",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-08898209a9b0801cd",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08898209a9b0801cd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "auth-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-08898209a9b0801cd",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer_support_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0c512fe19c9ff6168",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c512fe19c9ff6168",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3002
              }
            ],
            "name": "customer-support-prod-tg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0c512fe19c9ff6168",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gift_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0f17233eef581bc61",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f17233eef581bc61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3006
              }
            ],
            "name": "gift-production-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0f17233eef581bc61",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kowl_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0a60b7d5fce60214c",
            "description": "kowl-ecs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a60b7d5fce60214c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0338eeb05a954580e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "kowl-ecs-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0a60b7d5fce60214c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mobile_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0f96469f83bae87f2",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f96469f83bae87f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 6001
              }
            ],
            "name": "mobile-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0f96469f83bae87f2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-04cd115356f89ee63",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cd115356f89ee63",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-nginx-service",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-04cd115356f89ee63",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "notifcation_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-058574ad45a19a883",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058574ad45a19a883",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3003
              }
            ],
            "name": "prod-notification-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-058574ad45a19a883",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "restaurant_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0e66c451a84deffda",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e66c451a84deffda",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3004
              }
            ],
            "name": "resturant-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0e66c451a84deffda",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "restaurant_web_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0336956a6d594cf09",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0336956a6d594cf09",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 6002
              }
            ],
            "name": "resturant-web-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0336956a6d594cf09",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "super_admin_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0799bfd3c455bf834",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0799bfd3c455bf834",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 6003
              }
            ],
            "name": "super-admin-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0799bfd3c455bf834",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0e51d09f328d4ecd8",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e51d09f328d4ecd8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3005
              }
            ],
            "name": "user-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0e51d09f328d4ecd8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kowlUI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5",
            "arn_suffix": "app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Opalink-prod-KowlUI-LB-582924873.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Opalink-prod-KowlUI-LB",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0338eeb05a954580e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024eae79168ce7b83"
              },
              {
                "subnet_id": "subnet-07d7e43e5ac5d45df"
              },
              {
                "subnet_id": "subnet-09b4075cfd7920e9b"
              }
            ],
            "subnets": [
              "subnet-024eae79168ce7b83",
              "subnet-07d7e43e5ac5d45df",
              "subnet-09b4075cfd7920e9b"
            ],
            "vpc_id": "vpc-061e967e475b80600",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "opalink-prod-alb-logs-20250609",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "arn_suffix": "app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "opalink-prod-load-balancer-1076415687.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "opalink-prod-load-balancer",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e7d7aa70861f9951"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0005db19f81ad9a92"
              },
              {
                "subnet_id": "subnet-02487c5434c9a1bf7"
              },
              {
                "subnet_id": "subnet-0f5a75808c0b61c48"
              }
            ],
            "subnets": [
              "subnet-0005db19f81ad9a92",
              "subnet-02487c5434c9a1bf7",
              "subnet-0f5a75808c0b61c48"
            ],
            "vpc_id": "vpc-061e967e475b80600",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "accounting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/81edd6bcff422bc5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-accounting-service/46f7b71e985aa042",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-accounting-service/46f7b71e985aa042",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/81edd6bcff422bc5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/81edd6bcff422bc5"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.accounting_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "auth_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/148f2ed904f88274",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-auth-service/a6a422e6df8e5e0b",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-auth-service/a6a422e6df8e5e0b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/148f2ed904f88274",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3001,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/148f2ed904f88274"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.auth_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "customer_support",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/36bae10fe29c8140",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-customer-support/531cca4f3582a612",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-customer-support/531cca4f3582a612",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/36bae10fe29c8140",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3002,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/36bae10fe29c8140"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.customer_support",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gift_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f2648b28e8cd25a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-gift-service/eff798499598b3ff",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-gift-service/eff798499598b3ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f2648b28e8cd25a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3006,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f2648b28e8cd25a3"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.gift_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kowlUI_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5/691ecab2fc4b3200",
            "certificate_arn": "arn:aws:acm:us-east-1:263427518575:certificate/d44774d1-1d91-4fe5-94e2-5ed41fe4820b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-kowlUI-targetg/25c25278c72b1950",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-kowlUI-targetg/25c25278c72b1950",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5/691ecab2fc4b3200",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5/691ecab2fc4b3200"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "certificate_arn": "arn:aws:acm:us-east-1:263427518575:certificate/de9732bb-5e2a-4786-97de-972735fe01bf",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.nginx_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mobile_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/b7726a38bd37654f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-mobile-service/6c55d470963e770e",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-mobile-service/6c55d470963e770e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/b7726a38bd37654f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 6001,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/b7726a38bd37654f"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.mobile_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_service_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/b7bdbeae70c01fb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/b7bdbeae70c01fb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/b7bdbeae70c01fb1"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.nginx_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "notification",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/de439390e3fc7b73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-notification/45df65e60cdf10cc",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-notification/45df65e60cdf10cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/de439390e3fc7b73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3003,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/de439390e3fc7b73"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.notification",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "restaurant_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/aa4cbb0d5f18530b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-service/e0a96c40de2c048f",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-service/e0a96c40de2c048f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/aa4cbb0d5f18530b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3004,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/aa4cbb0d5f18530b"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.restaurant_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "restaurant_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/8b9cf601fb213b3f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-web/ef7c81a95de6ab6f",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-web/ef7c81a95de6ab6f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/8b9cf601fb213b3f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 6002,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/8b9cf601fb213b3f"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.restaurant_web",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "super_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/0ece3d8eaf535336",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-super-admin/7538e908f0435acc",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-super-admin/7538e908f0435acc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/0ece3d8eaf535336",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 6003,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/0ece3d8eaf535336"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.super_admin",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "user_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/eba4cd382b807eac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-user-service/e60266f4e528a2dc",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-user-service/e60266f4e528a2dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/eba4cd382b807eac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f",
            "mutual_authentication": [],
            "port": 3005,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/eba4cd382b807eac"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.user_service",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "accounting_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/59048da836eac28c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/accounting/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/59048da836eac28c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 11,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/59048da836eac28c"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "admin_web_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/ba449f60195b65cc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/admin-web/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/ba449f60195b65cc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 2,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/ba449f60195b65cc"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/6e25ce999e41eddf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/6e25ce999e41eddf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 1,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/6e25ce999e41eddf"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "customer_support_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/1c8ddd83ddeb8352",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/customer-support/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/1c8ddd83ddeb8352",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 6,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/1c8ddd83ddeb8352"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gift_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/fc6dbe0fddb9400b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/gift/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/fc6dbe0fddb9400b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 8,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/fc6dbe0fddb9400b"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "mobile_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/e20d13a2bf0119a2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/mobile/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/e20d13a2bf0119a2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 4,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/e20d13a2bf0119a2"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "notification_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/5be4bdbf9f0155b4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/notification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/5be4bdbf9f0155b4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 5,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/5be4bdbf9f0155b4"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "restaurant_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/bc1f837b7f706caf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/restaurant/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/bc1f837b7f706caf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 9,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/bc1f837b7f706caf"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "restaurant_web_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/200fe57eb2b4268e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/restaurant-web/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/200fe57eb2b4268e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 3,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/200fe57eb2b4268e"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "user_nginx_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/3f7890fd6e5f8b77",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/user/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/3f7890fd6e5f8b77",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:listener-rule/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f/f4dce4f3747b75c9/3f7890fd6e5f8b77"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "accounting_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-accounting-service/46f7b71e985aa042",
            "arn_suffix": "targetgroup/opalink-prod-accounting-service/46f7b71e985aa042",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-accounting-service/46f7b71e985aa042",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-accounting-service",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-accounting-service/46f7b71e985aa042"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-auth-service/a6a422e6df8e5e0b",
            "arn_suffix": "targetgroup/opalink-prod-auth-service/a6a422e6df8e5e0b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-auth-service/a6a422e6df8e5e0b",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-auth-service",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-auth-service/a6a422e6df8e5e0b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "customer_support",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-customer-support/531cca4f3582a612",
            "arn_suffix": "targetgroup/opalink-prod-customer-support/531cca4f3582a612",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3002",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-customer-support/531cca4f3582a612",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-customer-support",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-customer-support/531cca4f3582a612"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gift_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-gift-service/eff798499598b3ff",
            "arn_suffix": "targetgroup/opalink-prod-gift-service/eff798499598b3ff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3006",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-gift-service/eff798499598b3ff",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-gift-service",
            "port": 3006,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-gift-service/eff798499598b3ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kowlUI_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-kowlUI-targetg/25c25278c72b1950",
            "arn_suffix": "targetgroup/opalink-prod-kowlUI-targetg/25c25278c72b1950",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-kowlUI-targetg/25c25278c72b1950",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/Opalink-prod-KowlUI-LB/7208a0e5704bc6f5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-kowlUI-targetg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-kowlUI-targetg/25c25278c72b1950"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mobile_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-mobile-service/6c55d470963e770e",
            "arn_suffix": "targetgroup/opalink-prod-mobile-service/6c55d470963e770e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "6001",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-mobile-service/6c55d470963e770e",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-mobile-service",
            "port": 6001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-mobile-service/6c55d470963e770e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
            "arn_suffix": "targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-nginx-service",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-nginx-service/15c6c4a095eb080d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "notification",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-notification/45df65e60cdf10cc",
            "arn_suffix": "targetgroup/opalink-prod-notification/45df65e60cdf10cc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3003",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-notification/45df65e60cdf10cc",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-notification",
            "port": 3003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-notification/45df65e60cdf10cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "restaurant_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-service/e0a96c40de2c048f",
            "arn_suffix": "targetgroup/opalink-prod-restaurant-service/e0a96c40de2c048f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3004",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-service/e0a96c40de2c048f",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-restaurant-service",
            "port": 3004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-service/e0a96c40de2c048f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "restaurant_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-web/ef7c81a95de6ab6f",
            "arn_suffix": "targetgroup/opalink-prod-restaurant-web/ef7c81a95de6ab6f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "6002",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-web/ef7c81a95de6ab6f",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-restaurant-web",
            "port": 6002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-restaurant-web/ef7c81a95de6ab6f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "super_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-super-admin/7538e908f0435acc",
            "arn_suffix": "targetgroup/opalink-prod-super-admin/7538e908f0435acc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "6003",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-super-admin/7538e908f0435acc",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-super-admin",
            "port": 6003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-super-admin/7538e908f0435acc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "user_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-user-service/e60266f4e528a2dc",
            "arn_suffix": "targetgroup/opalink-prod-user-service/e60266f4e528a2dc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3005",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-user-service/e60266f4e528a2dc",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:263427518575:loadbalancer/app/opalink-prod-load-balancer/0a0bef0ef1ca1d3f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "opalink-prod-user-service",
            "port": 3005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263427518575:targetgroup/opalink-prod-user-service/e60266f4e528a2dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kowl_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0338eeb05a954580e",
            "description": "kowl-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0338eeb05a954580e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kowl-alb-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0338eeb05a954580e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0e7d7aa70861f9951",
            "description": "prod-ecs-load-balancer-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7d7aa70861f9951",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3003
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3004
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3005
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3006
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6003
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-ecs-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "prod-ecs-load-balancer-sg"
            },
            "tags_all": {
              "Name": "prod-ecs-load-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0e7d7aa70861f9951",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-0c08e9777ee69d97e",
            "description": "opalink-prod-auth-sg-rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c08e9777ee69d97e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020af550f02ed8cad",
                  "sg-08898209a9b0801cd",
                  "sg-096bd251d863594be"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "opalink-prod-auth-sg-rds",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-0c08e9777ee69d97e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-08898209a9b0801cd",
            "description": "Created in ECS Console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08898209a9b0801cd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d7aa70861f9951"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "auth-prod-sg",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-08898209a9b0801cd",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codebuild_database_access_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-096bd251d863594be",
            "description": "Allow code build to run migration scripts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-096bd251d863594be",
            "ingress": [],
            "name": "codebuild-database-access",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-096bd251d863594be",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "restaurant_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-090e72dcaaecf6855",
            "description": "opalink-prod-restaurant-sg-rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e72dcaaecf6855",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020af550f02ed8cad",
                  "sg-096bd251d863594be",
                  "sg-0e66c451a84deffda"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "opalink-prod-restaurant-sg-rds",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-090e72dcaaecf6855",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b86559deb7d93ce",
            "arn": "arn:aws:ec2:us-east-1:263427518575:elastic-ip/eipalloc-01b86559deb7d93ce",
            "association_id": "eipassoc-0eba54374915ff81f",
            "domain": "vpc",
            "id": "eipalloc-01b86559deb7d93ce",
            "network_border_group": "us-east-1",
            "network_interface": "eni-008cecde3cac9e558",
            "private_dns": "ip-192-168-10-60.ec2.internal",
            "private_ip": "192.168.10.60",
            "public_dns": "ec2-3-225-123-158.compute-1.amazonaws.com",
            "public_ip": "3.225.123.158",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:internet-gateway/igw-07acdab1ea3769889",
            "id": "igw-07acdab1ea3769889",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-production-internet-gateway"
            },
            "tags_all": {
              "Name": "opalink-production-internet-gateway"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b86559deb7d93ce",
            "association_id": "eipassoc-0eba54374915ff81f",
            "connectivity_type": "public",
            "id": "nat-07fe67219857c257d",
            "network_interface_id": "eni-008cecde3cac9e558",
            "private_ip": "192.168.10.60",
            "public_ip": "3.225.123.158",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02487c5434c9a1bf7",
            "tags": {
              "Name": "opalink-prod-nat-gateway"
            },
            "tags_all": {
              "Name": "opalink-prod-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_table_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-060a57ce909bbf5d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07fe67219857c257d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-060a57ce909bbf5d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-060a57ce909bbf5d0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table_app",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_table_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0054fc85cbf7da9331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07fe67219857c257d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0054fc85cbf7da933",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0054fc85cbf7da933"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table_db",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07acdab1ea3769889",
            "id": "r-rtb-03bca50c9854c102a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03bca50c9854c102a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03bca50c9854c102a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:route-table/rtb-060a57ce909bbf5d0",
            "id": "rtb-060a57ce909bbf5d0",
            "owner_id": "263427518575",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07fe67219857c257d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opalink-prod-private-route-table-app"
            },
            "tags_all": {
              "Name": "opalink-prod-private-route-table-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "rtb-060a57ce909bbf5d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:route-table/rtb-0054fc85cbf7da933",
            "id": "rtb-0054fc85cbf7da933",
            "owner_id": "263427518575",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07fe67219857c257d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opalink-prod-private-route-table-db"
            },
            "tags_all": {
              "Name": "opalink-prod-private-route-table-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "rtb-0054fc85cbf7da933",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:route-table/rtb-03bca50c9854c102a",
            "id": "rtb-03bca50c9854c102a",
            "owner_id": "263427518575",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07acdab1ea3769889",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opalink-prod-public-route-table"
            },
            "tags_all": {
              "Name": "opalink-prod-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "rtb-03bca50c9854c102a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_app_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04632901e4400398c",
            "region": "us-east-1",
            "route_table_id": "rtb-060a57ce909bbf5d0",
            "subnet_id": "subnet-07d7e43e5ac5d45df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_app",
            "module.vpc.aws_subnet.pvt_subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_app_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f323b3d65ae22626",
            "region": "us-east-1",
            "route_table_id": "rtb-060a57ce909bbf5d0",
            "subnet_id": "subnet-024eae79168ce7b83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_app",
            "module.vpc.aws_subnet.pvt_subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_app_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075935c350b081212",
            "region": "us-east-1",
            "route_table_id": "rtb-060a57ce909bbf5d0",
            "subnet_id": "subnet-0b69f9d961f0d658e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_app",
            "module.vpc.aws_subnet.pvt_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_db4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062b354ce7bc0fe4e",
            "region": "us-east-1",
            "route_table_id": "rtb-0054fc85cbf7da933",
            "subnet_id": "subnet-0e5d6d6215084f01a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_db",
            "module.vpc.aws_subnet.pvt_subnet4",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_db5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4318129f977bc06",
            "region": "us-east-1",
            "route_table_id": "rtb-0054fc85cbf7da933",
            "subnet_id": "subnet-0e04253ebd8aaba34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_db",
            "module.vpc.aws_subnet.pvt_subnet5",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_db6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec00b6245b20a7a",
            "region": "us-east-1",
            "route_table_id": "rtb-0054fc85cbf7da933",
            "subnet_id": "subnet-09b4075cfd7920e9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_db",
            "module.vpc.aws_subnet.pvt_subnet6",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075871b85b5801334",
            "region": "us-east-1",
            "route_table_id": "rtb-03bca50c9854c102a",
            "subnet_id": "subnet-02487c5434c9a1bf7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f36798f99b7add71",
            "region": "us-east-1",
            "route_table_id": "rtb-03bca50c9854c102a",
            "subnet_id": "subnet-0f5a75808c0b61c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0254209d3aa164d6a",
            "region": "us-east-1",
            "route_table_id": "rtb-03bca50c9854c102a",
            "subnet_id": "subnet-0005db19f81ad9a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:security-group/sg-020af550f02ed8cad",
            "description": "OpenVPN Access Server / Self-Hosted VPN (BYOL)-2.13.1-AutogenByAWSMP--1 created 2025-05-05T07:49:22.856Z",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020af550f02ed8cad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 945,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 945
              }
            ],
            "name": "OpenVPN Access Server / Self-Hosted VPN (BYOL)-2.13.1-AutogenByAWSMP--1",
            "name_prefix": "",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e967e475b80600"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "sg-020af550f02ed8cad",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-02487c5434c9a1bf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02487c5434c9a1bf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-public-subnet1-useast-1a"
            },
            "tags_all": {
              "Name": "opalink-prod-public-subnet1-useast-1a"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-02487c5434c9a1bf7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-0f5a75808c0b61c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5a75808c0b61c48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-public-subnet2-useast-1b"
            },
            "tags_all": {
              "Name": "opalink-prod-public-subnet2-useast-1b"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-0f5a75808c0b61c48",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-0005db19f81ad9a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.70.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0005db19f81ad9a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-public-subnet3-useast-1c"
            },
            "tags_all": {
              "Name": "opalink-prod-public-subnet3-useast-1c"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-0005db19f81ad9a92",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-07d7e43e5ac5d45df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d7e43e5ac5d45df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-private-subnet1-useast-1a-app"
            },
            "tags_all": {
              "Name": "opalink-prod-private-subnet1-useast-1a-app"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-07d7e43e5ac5d45df",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-024eae79168ce7b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.130.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024eae79168ce7b83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-private-subnet2-useast-1b-app"
            },
            "tags_all": {
              "Name": "opalink-prod-private-subnet2-useast-1b-app"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-024eae79168ce7b83",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-0b69f9d961f0d658e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.160.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b69f9d961f0d658e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-private-subnet3-useast-1c-app"
            },
            "tags_all": {
              "Name": "opalink-prod-private-subnet3-useast-1c-app"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-0b69f9d961f0d658e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-0e5d6d6215084f01a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.190.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5d6d6215084f01a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-private-subnet4-useast-1a-db"
            },
            "tags_all": {
              "Name": "opalink-prod-private-subnet4-useast-1a-db"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-0e5d6d6215084f01a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-0e04253ebd8aaba34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.220.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e04253ebd8aaba34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-private-subnet5-useast-1b-db"
            },
            "tags_all": {
              "Name": "opalink-prod-private-subnet5-useast-1b-db"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-0e04253ebd8aaba34",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:subnet/subnet-09b4075cfd7920e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.250.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b4075cfd7920e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263427518575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod-private-subnet6-useast-1c-db"
            },
            "tags_all": {
              "Name": "opalink-prod-private-subnet6-useast-1c-db"
            },
            "vpc_id": "vpc-061e967e475b80600"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "subnet-09b4075cfd7920e9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263427518575:vpc/vpc-061e967e475b80600",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08c5b67635e665130",
            "default_route_table_id": "rtb-0eed272021c26a1b6",
            "default_security_group_id": "sg-04b009d3c33ae0ca7",
            "dhcp_options_id": "dopt-0eba5a469c9ac6b39",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061e967e475b80600",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eed272021c26a1b6",
            "owner_id": "263427518575",
            "region": "us-east-1",
            "tags": {
              "Name": "opalink-prod"
            },
            "tags_all": {
              "Name": "opalink-prod"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "263427518575",
            "id": "vpc-061e967e475b80600",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}